# hevy-workout-ai

./: .env.example  .gitignore  PLAN.md  equipment.md  package-lock.json  package.json  pyproject.toml
config/: exercises.yaml  profile.example.yaml  profile.yaml  programs.yaml  state.yaml
db/: schema.sql
scripts/: mf_raw_dump.mjs  migrate_to_supabase.py  weekly.sh
src/hevy_workout_ai/: calendar.py  cli.py  coach.py  config.py  doms.py  garmin_client.py  generator.py  healthkit.py  hevy_client.py  hevy_load.py  mf_sync.py  nutrition.py  peloton_client.py  progression.py  recommender.py  recovery.py  reminders.py  store.py  strava_client.py  training_load.py  web.py  weight_estimator.py  whoop_client.py  whoop_load.py  whoop_log.py
